--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,16 @@
             <artifactId>pdfbox-tools</artifactId>
             <version>2.0.12</version>
         </dependency>-->
+
+        <!-- 使用 poi-tl 处理word
+        源码：https://github.com/Sayi/poi-tl
+        文档：http://deepoove.com/poi-tl/
+        -->
+        <dependency>
+            <groupId>com.deepoove</groupId>
+            <artifactId>poi-tl</artifactId>
+            <version>1.8.0</version>
+        </dependency>
     </dependencies>
 
 
